fastapiapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapiapp-deployment
  namespace: my-namespace
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fastapiapp
  template:
    metadata:
      labels:
        app: fastapiapp
    spec:
      containers:
      - name: fastapiapp-container
        image: ilievaana/fastapiapp:latest
        ports:
        - containerPort: 8000
