fastapiapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapiapp-service
  namespace: my-namespace
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8000
      nodePort: 30080
  selector:
    app: fastapiapp
