mongodb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: my-namespace
spec:
  clusterIP: None
  selector:
    app: mongodb
  ports:
  - port: 27017
    name: mongo
