traefik-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: my-namespace
spec:
  type: LoadBalancer
  ports:
    - name: web
      port: 80
      targetPort: 80
    - name: websecure
      port: 443
      targetPort: 443
  selector:
    app: traefik
